[tool.poetry]
name = "version2-with-poetry"
version = "0.1.0"
description = ""
authors = ["julio4ai <juliocolomer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
jupyterlab = "^4.2.4"
langchain = "^0.2.14"
langchain-openai = "^0.1.22"
python-dotenv = "^1.0.1"
openai = "^1.42.0"
pydantic = "^2.8.2"
lxml = "^5.3.0"
tiktoken = "^0.7.0"
unstructured = {extras = ["all-docs"], version = "^0.15.7"}
pytesseract = "^0.3.13"
langchain-community = "^0.2.12"
langchain-chroma = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
